anypoint-data-gateway/v/1.4.0/troubleshooting-data-gateway.adoc
= Troubleshooting Data Gateway
:keywords: data gateway, salesforce, sap, oracle

== Entitlements Support

Your Anypoint Platform account must own the necessary entitlements to be able to access the DataGateway Designer in Salesforce. If you're not able to access the designer, make sure that your contract with MuleSoft includes these entitlements. If it doesn't, you can file a ticket in the link:/anypoint-platform-administration/community-and-support[support portal].
If you own a trial account, keep in mind that this trial licence expires after a given period of time. Once this trial period has expired, you won't be able to access the DataGateway Designer either.

== Salesforce Organization Match

If you're using the Data Gateway through the Anypoint Platform, then you must link your Anypoint Platform account to a Salesforce account that is in the same Salesforce organization as the resources in use. This means that if you create Gateways to resources that exist in a Salesforce organization "A", and then another user in your same Anypoint Platform organization tries to access these Gateways using his Salesforce user which is in Salesforce organization "B", this won't work.

== Known Issues

* The product will not run after installation, unless you have completed the llink:/anypoint-data-gateway/v/1.4.0/installing-anypoint-data-gateway[post-installation steps]

* Gateway creation will fail if:

**  the related Salesforce org does not have Available External Data Source licenses within Lightning Connect
**  the related Anypoint Account does not have free workers (sized at 1vcore)

* Gateway creation and deployment can take up to 2 minutes, due to the volume of provisioning that occurs in the background of this application. A loading message will persist throughout this process

* Due to known issues in the Salesforce API, any publishing or synchronization issue can be easily fixed by going to Setup > Develop > External Data sources, selecting the published data source and clicking on Validate and Sync (In Salesforce)

* If you are publishing more than 100 objects to Salesforce, you will need to create a separate environment for additional gateways, since Salesforce only allows 100 objects per endpoint.

* Since all the objects within an environment are now published through a single OData API, there must not be duplicate object names across the Data Gateways in a given environment.

* Any published DataGateway (prior to v1.4.0) must be republished through the Salesforce link in the left navigation bar to ensure it uses the new single OData API.

* In order to use the latest fixes on data mapping, new Data Gateways must be created to replace the old ones that uses blob, double and datetime fields.
