anypoint-data-gateway/v/1.4.1/troubleshooting-data-gateway.adoc
= Troubleshooting Data Gateway
:keywords: data gateway, salesforce, sap, oracle, db2, odata, mysql, sqlserver

== Entitlements Support

Your Anypoint Platform account must own the necessary entitlements to be able to access the DataGateway Designer in Salesforce. If you're not able to access the designer, make sure that your contract with Mulesoft includes these entitlements. If it doesn't, you can file a ticket in the link:/anypoint-platform-administration/community-and-support[support portal].
If you own a trial account, keep in mind that this trial licence expires after a given period of time. Once this trial period has expired, you won't be able to access the DataGateway Designer either.

== Salesforce Organization Match

If you're using the Data Gateway through the Anypoint Platform, then you must link your Anypoint Platform account to a Salesforce account that is in the same Salesforce organization as the resources in use. This means that if you create Data Gateways to resources that exist in a Salesforce organization "A", these resources are not available to another user in your same Anypoint Platform organization that tries to access these Data Gateways using his Salesforce user in Salesforce organization "B".

== Known Issues

* Gateway creation will fail if:

**  the related Salesforce organization does not have any Available External Data Source licenses within Lightning Connect
**  the related Anypoint Account does not have free workers (sized at 1vcore)

* Gateway creation and deployment can take up to 2 minutes, due to the volume of provisioning that occurs in the background of this application. A loading message will persist throughout this process

* Due to known issues in the Salesforce API, any publishing or synchronization issue can be fixed by going to Setup > Develop > External Data sources, selecting the published data source and clicking on Validate and Sync (In Salesforce)

* Since all the objects within an environment are now published through a single OData API, there must not be duplicate object names across the Data Gateways in a given environment.

* In order to use the latest fixes on data mapping, new Data Gateways must be created to replace the old ones that use blob, double and datetime fields.

* When using a connection string to set up a DB2, Oracle or MySQL DataGateway, Cloud Extender will be disabled. Cloud Extender needs the initial host and ports defined to open a tunnel, and these can not be safely derived from a connection string. The connection string can be used with either a public database, or through a VPC.

=== Salesforce

* The product will not run after installation, unless you have completed the llink:/anypoint-data-gateway/v/1.4.1/installing-anypoint-data-gateway[post-installation steps]

* Due to known issues in the Salesforce API, any publishing or synchronization issue can be easily fixed by going to Setup > Develop > External Data sources, selecting the published data source and clicking on Validate and Sync (In Salesforce)

* If you are publishing more than 100 objects to Salesforce, you will need to create a separate environment for additional gateways, since Salesforce only allows 100 objects per endpoint.

* Any published DataGateway (prior to v1.4.0) must be republished through the Salesforce link in the left navigation bar to ensure it uses the new single OData API.

=== Oracle

* If an Oracle Data Gateway fails to retrieve tables, ensure that the schema is all uppercase.

=== DB2

* Due to a limitation in the DB2 database, OData queries with the `$skip` and `$top` operators over tables with blob fields will fail. Use $select to filter all of the blob fields.
